# New-Ticket-Sys

./: CMakeLists.txt  actual_3.out  bpt.db  debug_3_full.txt  debug_full.txt  debug_new.txt  debug_output.txt  debug_output2.txt  debug_test.txt  debug_test2.txt  input.txt  my3.out  my4.out  my5.out  my6.out  my6_new.out  my7.out  output3.txt  run-tests.ps1  run_result.txt  test.cpp  test3_output.txt  test4_output.txt  test_30.out  test_30_final.out  test_30_with_debug.out  test_3_actual.out  test_3_current.out  test_3_final.out  test_3_fixed.out  test_3_new.out  test_3_sep.out  test_3_sep_clean.out  test_3_seq.out  test_3_truncated.in  test_4_actual.out  test_5_actual.out  test_5_clean.out  test_5_debug.txt  test_5_seq.out  (+10 more)
.cache/clangd/index/: String.hpp.E4E8841B68B6D5F4.idx  System.cpp.21926B2587BB4C25.idx  System.hpp.D6E771A22DA93D60.idx  Ticket.hpp.6C8B3F98C4304B14.idx  TicketSystem.cpp.7DEB950B3A6B4239.idx  TicketSystem.hpp.D3A26EE261484D92.idx  Train.hpp.75CFAC42BD1636DD.idx  TrainSystem.cpp.F8C9BFC9CB51D2BE.idx  TrainSystem.hpp.142DFB64DA4D8B67.idx  User.hpp.2935A13C07B92E13.idx  UserSystem.cpp.FFE94F95FDB71D05.idx  UserSystem.hpp.8D6279A23B7AF885.idx  bpt.hpp.75431A7B640B92D5.idx  exceptions.hpp.2805D2663C0FC464.idx  (+8 more)
include/container/: String.hpp  bpt.hpp  list.hpp  map.hpp  utility.hpp  vector.hpp
include/memoryriver/: memoryriver.hpp
include/system/: System.hpp  Ticket.hpp  TicketSystem.hpp  Train.hpp  TrainSystem.hpp  User.hpp  UserSystem.hpp
src/: main.cpp
src/system/: System.cpp  TicketSystem.cpp  TrainSystem.cpp  UserSystem.cpp
